# FileDiCalcolo

./: CMakeLists.txt  Cells.cpp  Cells.h  Function.h  Functions.h  Max.cpp  Max.h  Media.cpp  Media.h  Min.cpp  Min.h  Observer.h  RunAllTest.cpp  Subject.h  Sum.cpp  Sum.h  Window.cpp  Window.h  test.cpp
test/: CMakeLists.txt
